OpenSearch analysis graph changes